--- a/email-worker-compose/docker-compose.yml
+++ b/email-worker-compose/docker-compose.yml
@@ -1,5 +1,42 @@
 version: '2'
+volumes:
+  dados:
+networks:
+  banco:
+  web:
 services:
   db:
     image: postgres:9.6
-    
+    volumes:
+    #volume dos dados
+    - dados:/var/lib/postgresql/data
+    #Scripts
+    - ./scripts:/scripts
+    - ./scripts/init.sql:/docker-entrypoint-initdb.d/init.sql
+    networks:
+    - banco
+  frontend:
+    image: nginx:1.13
+    volumes:
+    #site
+    - ./web:/usr/share/nginx/html/
+    #configuração do proxy
+    - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+    ports:
+    - 80:80
+    networks:
+    - web
+    depends_on:
+    - app
+  app:
+    image: python:3.6
+    volumes:
+    # Aplicacao
+    - ./app:/app
+    working_dir: /app
+    command: bash ./app.sh
+    networks:
+    - banco
+    - web
+    depends_on:
+    - db
